Menambahkan about.html & memodifikasi index.html

--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contoh penggunaan Git</title>
+    <title>Halaman About</title>
   </head>
   <body>
-<h2>Contoh penggunaan Git</h2>
+
   </body>
 </html>
